Fix bug where pressing tab would add scrollbars
Errant div added by this accessibility code: https://github.com/pixijs/pixi.js/blob/576c7af65d9ed4612a215b91efbee913135fbeb9/packages/accessibility/src/AccessibilityManager.ts

Fix on the overflow: hidden not hiding the scrollbar:
https://stackoverflow.com/questions/19236349/body-set-to-overflow-yhidden-but-page-is-still-scrollable-in-chrome

--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,14 @@ body, html, div#root {
 }
 
 div.App {
-  justify-content: center;
-  align-items: center;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: block;
   overflow: hidden;
+  /*Required to make the accessibility div added by pixi not add scrollbars on WallpaperContainer*/
+  position: absolute;
 }
 
 div.Loading {
@@ -55,6 +55,11 @@ div.WallpaperContainer {
   margin: 0;
   padding: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .ControlFormItem {
